(PC-24024)[PRO] fix: wording and style visibility screen
(cherry picked from commit 1b9d63e7ce6210216d275f33d7e65d5b01198cc1)

--- a/pro/src/screens/CollectiveOfferVisibility/CollectiveOfferVisibility.module.scss
+++ b/pro/src/screens/CollectiveOfferVisibility/CollectiveOfferVisibility.module.scss
@@ -10,7 +10,7 @@
 }
 
 .row-layout {
-  width: rem.torem(700px);
+  width: rem.torem(570px);
 }
 
 .legend {
